<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
<TextView
    android:text="@string/Home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#755daaff"
    android:textSize="38sp"
    android:layout_marginBottom="5dp"
    android:gravity="center"
    android:layout_weight="0.08" />
 <Button
     android:id="@+id/main_article"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/Articles"
     android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/main_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Users"
        android:layout_marginTop="15dp" />
    <Button
        android:id="@+id/main_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Orders"
        android:layout_marginTop="15dp" />
    <Button
        android:id="@+id/main_replenishment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Replenishment"
        android:layout_marginTop="15dp" />
</LinearLayout>