<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/oder_overview_header"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#755daaff"
        android:textSize="38sp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/Orders" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:choiceMode="singleChoice"
        android:listSelector="#4d90fe"
        android:id="@+id/order_overview_listorders"
        style="@style/AppTheme"
        android:clickable="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewOrder"
        android:id="@+id/order_overview_new"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancelation"
            android:id="@+id/order_overview_cancel"
            android:layout_weight="0.50" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShowDetails"
            android:id="@+id/order_overview_details"
            android:layout_weight="0.50" />
    </LinearLayout>
</LinearLayout>